--- a/deno.json
+++ b/deno.json
@@ -5,7 +5,8 @@
     "CITATION.cff": "cmt codemeta.json CITATION.cff",
     "INSTALL.md": "cmt codemeta.json INSTALL.md",
     "version.ts": "cmt codemeta.json version.ts",
-    "gen-code": "deno task README.md ; deno task about.md ; deno task CITATION.cff ; deno task INSTALL.md ; deno task version.ts"
+    "gen-code": "deno task Makefile",
+    "Makefile": "cmt .\\codemeta.json Makefile"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
